# blanket

./: .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
ci/travis/: after_success.sh  deploy.sh  install.sh  script.sh
src/: default.rs  derive.rs  items.rs  lib.rs  utils.rs
src/derive/: arc.rs  box.rs  mod.rs  mut.rs  rc.rs  ref.rs
src/types/: arc.rs  box.rs  cow.rs  mod.rs  mut.rs  rc.rs  ref.rs
tests/: char_visitor.rs  derive_box.rs  fails.rs  trybuilds.rs
tests/derive_arc/: mod.rs
tests/derive_arc/fails/: noderive.rs  noderive.stderr  receiver_box.rs  receiver_box.stderr  receiver_mut.rs  receiver_mut.stderr  receiver_self.rs  receiver_self.stderr
tests/derive_arc/successes/: assoc_function.rs  assoc_function_rettype.rs  assoc_type.rs  async_assoc_function.rs  async_method.rs  receiver_ref.rs  trait_generics.rs  where_clause_assoc_fn.rs
tests/derive_box/: mod.rs
tests/derive_box/fails/: noderive.rs  noderive.stderr  unsized_type_self_receiver.rs  unsized_type_self_receiver.stderr
tests/derive_box/successes/: assoc_function.rs  assoc_function_rettype.rs  assoc_type.rs  async_assoc_function.rs  async_method.rs  receiver_mix.rs  receiver_mut.rs  receiver_ref.rs  receiver_self.rs  trait_generics.rs  trait_generics_bounded.rs  trait_generics_lifetime.rs  unsized_type.rs  where_clause_assoc_fn.rs
tests/derive_cow/: mod.rs
tests/derive_cow/successes/: assoc_function.rs  assoc_function_rettype.rs  assoc_type.rs  async_assoc_function.rs  async_method.rs  receiver_ref.rs  trait_generics.rs  where_clause_assoc_fn.rs
tests/derive_mut/: mod.rs
tests/derive_mut/fails/: boxmethods.stderr  noderive.rs  noderive.stderr  receiver_box.rs  receiver_box.stderr  receiver_self.stderr  selfmethods.rs  selfmethods.stderr
tests/derive_mut/successes/: assoc_function.rs  assoc_function_rettype.rs  assoc_type.rs  receiver_mix.rs  receiver_mut.rs  receiver_ref.rs  trait_generics.rs  where_clause_assoc_fn.rs
tests/derive_rc/: mod.rs
tests/derive_rc/fails/: boxmethods.rs  boxmethods.stderr  mutmethods.stderr  noderive.rs  noderive.stderr  receiver_box.stderr  receiver_mut.rs  receiver_mut.stderr  receiver_self.stderr  selfmethods.rs  selfmethods.stderr
tests/derive_rc/successes/: assoc_function.rs  assoc_function_rettype.rs  assoc_type.rs  async_assoc_function.rs  async_method.rs  receiver_ref.rs  trait_generics.rs  where_clause_assoc_fn.rs
tests/derive_ref/: fail.rs  fail.stderr  mod.rs
tests/derive_ref/fails/: assoc_function_self.rs  assoc_function_self.stderr  boxmethods.rs  boxmethods.stderr  mutmethods.stderr  noderive.rs  noderive.stderr  receiver_box.stderr  receiver_mut.rs  receiver_mut.stderr  receiver_self.stderr  selfmethods.rs  selfmethods.stderr
tests/derive_ref/successes/: assoc_function.rs  assoc_function_rettype.rs  assoc_type.rs  async_assoc_function.rs  async_method.rs  receiver_ref.rs  static_method.rs  trait_generics.rs  where_clause_assoc_fn.rs
tests/fails/: default-with-default.rs  default-with-default.stderr  duplicate-default.rs  duplicate-default.stderr  invalid-default-1.rs  invalid-default-1.stderr  invalid-default-2.rs  invalid-default-2.stderr
