[package]
name = "blanket"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2018"
license = "MIT"
description = "A simple macro to derive blanket implementations for your traits."

[package.metadata.docs.rs]
features = [ "_doc" ]

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
quote = "1.0"
proc-macro2 = "1.0"
strum = "0.18"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dev-dependencies]
trybuild = "1.0"

[features]
_doc = []


[[test]]
name = "derive_ref"
path = "tests/derive_ref/mod.rs"

[[test]]
name = "derive_box"
path = "tests/derive_box/mod.rs"
