[package]
name = "blanket"
version = "0.1.5"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2018"
license = "MIT"
description = "A simple macro to derive blanket implementations for your traits."
repository = "https://github.com/althonos/blanket"
homepage = "https://github.com/althonos/blanket"
readme = "README.md"
keywords = ["proc-macro", "attribute", "blanket", "trait", "impl"]
categories = ["development-tools", "rust-patterns"]

[package.metadata.docs.rs]
features = [ "_doc" ]

[badges.travis-ci]
repository = "althonos/blanket"
[badges.codecov]
repository = "althonos/blanket"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/blanket"
[badges.maintenance]
status     = "actively-developed"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
[dependencies.syn]
version = "1.0"
default-features = false
features = ["full"]

[dev-dependencies]
trybuild = "1.0"
impls = "1.0"
static_assertions = "1.1"
[dev-dependencies.syn]
version = "1.0"
features = ["full", "extra-traits"]

[features]
default = []
_doc = []

[[test]]
name = "derive_box"
path = "tests/derive_box/mod.rs"
harness = false
[[test]]
name = "derive_mut"
path = "tests/derive_mut/mod.rs"
harness = false
[[test]]
name = "derive_rc"
path = "tests/derive_rc/mod.rs"
harness = false
[[test]]
name = "derive_ref"
path = "tests/derive_ref/mod.rs"
harness = false
